ARM: dts: msm8917/37: Build minimum dtb for Bq U devices.
Change-Id: Ibf54914077df55ad8ac9ea35e9f2b4d8c046c91b
Signed-off-by: mifl <mifl.pc@gmail.com>

--- a/arch/arm/configs/hardcore_defconfig
+++ b/arch/arm/configs/hardcore_defconfig
@@ -353,6 +353,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_S3C64XX is not set
 # CONFIG_ARCH_DAVINCI is not set
 # CONFIG_ARCH_OMAP1 is not set
+CONFIG_MSM89X7_BQ_U_2016=y
 
 #
 # MSM SoC Type
